Fix issue with numbers not showing fully in pet info input pages due to too large padding.

--- a/Pet-feeder-app/public/sass/main.css
+++ b/Pet-feeder-app/public/sass/main.css
@@ -8712,7 +8712,7 @@ input {
   
   .flex-outer li input:not([type='checkbox']),
   .flex-outer li textarea {
-    padding: 15px;
+    padding: 10px;
     border: thin solid ; 
   }
   
